# particle-simulation

./: .gitignore  CMakeLists.txt  README.md
include/: Particle.hpp  ParticleSystem.hpp
include/utils/: color.hpp  math.hpp
src/: Particle.cpp  ParticleSystem.cpp  main.cpp
src/utils/: color.cpp  math.cpp
